--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
-    "name": "Torrent-Api-py",
-    "description": "An Unofficial API for 1337x, Piratebay, Nyaasi, Torlock, Torrent Galaxy, Zooqle, Kickass, Bitsearch, MagnetDL, Libgen, YTS, TorrentFunk, Glodls TorrentProject and YourBittorrent",
-    "keywords": ["fast-api", "python", "torrent", "api"],
-    "repository": "https://github.com/Ryuk-me/Torrent-Api-py",
+  "name": "MsGSuite-Bot",
+  "description": "Telegram Bot to generate TD",
+  "repository": "https://github.com/eaustin6/Torrent-Api-py",
+  "logo": "https://avatars.githubusercontent.com/u/80416370?v=4",
+  "keywords": ["node", "express", "heroku", "MsGSuite", "Bot"],
+  "image": "heroku/nodejs"
 }
